fix jump sound repeat issue and reformat css

--- a/easter_egg_hunt_platformer/css/game.css
+++ b/easter_egg_hunt_platformer/css/game.css
@@ -1,24 +1,56 @@
 /* background*/
-.background    { background: rgb(52, 166, 251);
-    table-layout: fixed;
-    border-spacing: 0;              }
-.background td { padding: 0;                     }
-.lava          { background: rgb(255, 100, 100); }
-.wall          { background: white;              }
-.pad          { background: grey;              }
+.background {
+  background: rgb(52, 166, 251);
+  table-layout: fixed;
+  border-spacing: 0;
+}
+
+.background td {
+  padding: 0;
+}
+
+.lava {
+  background: rgb(255, 100, 100);
+}
+
+.wall {
+  background: white;
+}
+
+.pad {
+  background: grey;
+}
 
 
 /* actors */
-.actor  { position: absolute;            }
-.coin   { background: rgb(241, 229, 89); }
-.glasses   { background: purple; }
-.player { background: rgb(64, 64, 64);   }
-.teleport_forward { background: blue;   }
-.teleport_backward { background: blueviolet;   }
+.actor {
+  position: absolute;
+}
+
+.coin {
+  background: rgb(241, 229, 89);
+}
+
+.glasses {
+  background: purple;
+}
+
+.player {
+  background: rgb(64, 64, 64);
+}
+
+.teleport_forward {
+  background: blue;
+}
+
+.teleport_backward {
+  background: blueviolet;
+}
 
 .teleport_backward .player {
   box-shadow: -4px -7px 8px white, 4px -7px 8px white;
 }
+
 .teleport_forward .player {
   box-shadow: -4px -7px 8px white, 4px -7px 8px white;
 }
@@ -26,16 +58,17 @@
 
 /* player win lose */
 .lost .player {
-    background: rgb(160, 64, 64);
-  }
-  .won .player {
-    box-shadow: -4px -7px 8px white, 4px -7px 8px white;
-  }
+  background: rgb(160, 64, 64);
+}
 
-  /* game overflow */
-  .game {
-    overflow: hidden;
-    max-width: 600px;
-    max-height: 450px;
-    position: relative;
-  }
+.won .player {
+  box-shadow: -4px -7px 8px white, 4px -7px 8px white;
+}
+
+/* game overflow */
+.game {
+  overflow: hidden;
+  max-width: 600px;
+  max-height: 450px;
+  position: relative;
+}
